--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 <div class='wrap'>
 
 <header>
-  <div class='brand'>
-    <img src='https://i.postimg.cc/tnN4mtbN/logo.png'>
-    <div>
-      <h1>Nimesh Creations</h1>
-      <p>Social Media Boosting • Fast • Safe</p>
-    </div>
+ <div class="brand">
+  <img src="https://i.postimg.cc/tnN4mtbN/logo.png" alt="Logo">
+
+  <div class="brand-text">
+    <h1>Nimesh Creations</h1>
+    <p>Social Media Boosting • Fast • Safe</p>
   </div>
+</div>
+
 
   <nav>
     <a href='index.html'>Home</a>
