--- a/services.html
+++ b/services.html
@@ -28,8 +28,9 @@
 
 <header>
   <div class="brand">
-    <img src="https://i.postimg.cc/tnN4mtbN/logo.png">
-    <div>
+    <img src="https://i.postimg.cc/tnN4mtbN/logo.png" alt="Logo">
+
+    <div class="brand-text">
       <h1>Nimesh Creations</h1>
       <p>Social Media Boosting • Fast • Safe</p>
     </div>
@@ -42,6 +43,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 
 <main>
