--- a/about.html
+++ b/about.html
@@ -10,17 +10,23 @@
 <div class='wrap'>
 
 <header>
-  <div class='brand'>
-    <img src='https://i.postimg.cc/tnN4mtbN/logo.png'>
-    <div><h1>Nimesh Creations</h1><p>Social Media Boosting • Fast • Safe</p></div>
+  <div class="brand">
+    <img src="https://i.postimg.cc/tnN4mtbN/logo.png" alt="Logo">
+
+    <div class="brand-text">
+      <h1>Nimesh Creations</h1>
+      <p>Social Media Boosting • Fast • Safe</p>
+    </div>
   </div>
+
   <nav>
-    <a href='index.html'>Home</a>
-    <a href='services.html'>Services</a>
-    <a href='about.html'>About</a>
-    <a href='contact.html'>Contact</a>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <main>
   <section class='about reveal'>
