--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
 <header>
   <div class="brand">
-    <img src="https://i.postimg.cc/tnN4mtbN/logo.png" alt="Logo">
+    <img src="https://i.postimg.cc/C5KXwhyH/logo.png" alt="Logo">
 
     <div class="brand-text">
       <h1>Nimesh Creations</h1>
