--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
   <nav>
-    <a href='index.html'>Home</a>
+    <a href="index.html" class="active">Home</a>
     <a href='services.html'>Services</a>
     <a href='about.html'>About</a>
     <a href='contact.html'>Contact</a>
