--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
+    <a href="services.html" class="active">Services</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
