--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
-    <a href="about.html">About</a>
+<a href="about.html" class="active">About</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
