--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,8 @@
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="active">Contact</a>
+
   </nav>
 </header>
 
