--- a/services.html
+++ b/services.html
@@ -103,6 +103,21 @@
     </div>
 
 
+    <!-- Youtube VIEWS -->
+<div class="service">
+  <h3>YouTube — Views (Best Offer)</h3>
+  <p>🔥 Boost your channel fast and safely</p>
+
+  <ul style="margin:10px 0; padding-left:18px; line-height:1.6;">
+    <li>1K YouTube Views — <strong>Rs.000</strong></li>
+    <li>5K YouTube Views — <strong>Rs.000</strong></li>
+    <li>10K YouTube Views — <strong>Rs.000</strong></li>
+    <li>20K YouTube Views — <strong>Rs.000</strong></li>
+  </ul>
+
+  <a class="whatsapp-btn" href="https://wa.me/94727030781?text=YouTube_Boost_Needed">Order on WhatsApp</a>
+</div>
+
     <!-- INSTAGRAM -->
     <div class="service">
       <h3>Instagram — Likes / Followers</h3>
