--- a/services.html
+++ b/services.html
@@ -102,6 +102,22 @@
       <a class="whatsapp-btn" href="https://wa.me/94727030781?text=Tiktok_Views_Boost_Needed">Order on WhatsApp</a>
     </div>
 
+      <!-- Tiktok Saves -->
+     <div class="service">
+      <h3>TikTok — Video Saves (Best Offer)</h3>
+      <p>🔥 Fast & Safe TikTok Saves Delivery</p>
+
+      <ul style="margin:10px 0; padding-left:18px; line-height:1.6;">
+        <li>500 TikTok Saves — <strong>Rs.100</strong></li>
+        <li>1K TikTok Saves — <strong>Rs.200</strong></li>
+        <li>2K TikTok Saves — <strong>Rs.350</strong></li>
+        <li>5K TikTok Saves — <strong>Rs.850</strong></li>
+        <li>10K TikTok Saves — <strong>Rs.1600</strong></li>
+      </ul>
+
+      <a class="whatsapp-btn" href="https://wa.me/94727030781?text=Tiktok_Saves_Boost_Needed">Order on WhatsApp</a>
+    </div>
+
 
     <!-- Youtube VIEWS -->
 <div class="service">
@@ -116,7 +132,7 @@
     <li>20K YouTube Views — <strong>Rs.9000</strong></li>
   </ul>
 
-  <a class="whatsapp-btn" href="https://wa.me/94727030781?text=YouTube_Boost_Needed">Order on WhatsApp</a>
+  <a class="whatsapp-btn" href="https://wa.me/94727030781?text=YouTube_Views_Boost_Needed">Order on WhatsApp</a>
 </div>
 
     <!-- INSTAGRAM -->
@@ -146,13 +162,6 @@
     </div>
 
 
-    <!-- TIKTOK REPORTS -->
-    <div class="service">
-      <h3>TikTok — Reports / Saves</h3>
-      <p>Signal boosting.</p>
-      <div class="price">Rs.100 — Rs.20,000</div>
-      <a class="whatsapp-btn" href="https://wa.me/94727030781?text=Tiktok_Report_or_Saves_Boost_Needed">Order on WhatsApp</a>
-    </div>
 
   </section>
 </main>
