--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ function closeImage() {
   document.getElementById("image-viewer").style.display = "none";
 }
 </script>
+<!-- redeploy -->
 
 </body>
 </html>
